src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"
@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap')
@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap')

// Config vars
// Kaldi logo brand color: #b71020
$kaldi-red: #b71020
$kaldi-red-invert: #fff

$primary: $kaldi-red
$primary-invert: $kaldi-red-invert
$body-color: #333
$black: #2b2523
$font: 'Work Sans', sans-serif
$heading-font: 'Playball', cursive


*
  font-family: $font

html body 
  overflow-x: hidden

a:hover 
  color: $kaldi-red !important
.navbar
  min-height: 5.25rem
  .navbar-menu
    box-shadow:none !important

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

.heading-index
  background: $primary
  color: #fff
  text-align: center
  h3
    color: #fff !important

.jumbo-heading
  text-transform: uppercase
  text-align: center
  h3
    font-size: 1.3rem !important
  

.jumbo-logo
  width: 146px
  height: 146px

.btn-index
  margin-bottom: -15rem !important
  margin-top: 2rem !important
  position: relative
  top: 2rem
  a
    color: $kaldi-red    
  button:first-child
    margin-bottom: 1.5rem
  button
    height: 50px
    border-radius: 20px
    margin: 0 3.7rem

//.column .is-6
//  width: 33%
 
.columns
  button
    color: $kaldi-red
    text-transform: uppercase
    font-weight: 600
    width: 30vw

.heading-news
  color: $kaldi-red
  background: #fff
  border-top: 3px solid $kaldi-red
  border-bottom: 3px solid $kaldi-red
  text-align: center
  
  h3
    color: $kaldi-red !important
    text-transform: uppercase 
    margin: 2rem 0



// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 2em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.full-width-image
    width: 100vw
    height: 43vh
    background-size: cover
    background-position: bottom
    display: flex
    justify-content: center
    align-items: center
    height: 599px

.btn
    display: inline-block
    padding: 12px 16px 10px
    font-size: 18px
    font-size: 1rem
    line-height: 1.25
    background-color: #fff
    border-radius: .25rem
    text-decoration: none
    font-weight: 700
    color: $kaldi-red
    text-align: center
    -webkit-box-shadow: inset 0 0 0 2px #CC3700
    box-shadow: inset 0 0 0 2px #f40
    -webkit-transition: all .15s ease
    transition: all .15s ease

.margin-top-0
  margin-top: 0 !important

.navbar-item .icon
  color: $primary
// Override for use of svg's from https://simpleicons.org/
.navbar-item 
  img
    max-height: 3.75rem !important
.icon svg
  width: 1.5rem
  height: 1.5rem
  fill: currentColor
.navbar-brand .navbar-item.logo
  padding: 0 1rem

footer.footer  
  background-color: $kaldi-red
  .social
    background-color: $kaldi-red
  
  .store-item-apple
    height: 80px

  .store-item-google
    height: 47px

//Menu overrides
$menu-item-color: $white-ter
$menu-item-hover-color: $black !important
$menu-item-hover-background-color: $black
$menu-item-active-color: $kaldi-red-invert
$menu-item-active-background-color:	$kaldi-red-invert
$menu-list-border-left: 1px solid $kaldi-red-invert
$menu-label-color: $white-ter


.menu-label
  font-size: 1em !important
  text-align: left
.menu-list
  list-style: none !important
  text-align: left
.social
  padding: 2em
.social a
    padding: .5em .5em .3em .5em
    border-radius: 1em
    background-color: $white-ter
    margin: .5em
    width: 1em
    height: 1em
    vertical-align: middle
    display: inline

// blog roll
.blog-list-item.is-featured
  background-color: #ECD1D1
.blog-list-item header
  display: flex
  margin-bottom: 1em
.blog-list-item .featured-thumbnail
  flex-basis: 35%
  margin: 0 1.5em 0 0

//.section
//  padding: 2rem 0.5rem !important

.width-33
  width: 33%

.heading-font 
  font-size: 6em !important

.img-carousel
  display: flex
  flex-direction: column
  width: 400px
  margin: 3rem auto  

.submit-btn
  background: $kaldi-red !important

@import "~bulma"


// responsiveness
+tablet-only
  html, body 
    max-width: 100%
    overflow-x: hidden

  .jumbo-heading
    text-transform: uppercase
    text-align: center
    h1
      font-size: 2.3rem !important

  .blog-list-item .featured-thumbnail
    flex-basis: 50%

  .columns
    button
      color: $kaldi-red
      width: 80vw
      text-transform: uppercase
      font-weight: 600

  .btn-index
    margin-bottom: -15rem !important
    margin-top: 2rem !important
    position: relative
    top: 2rem
    button:first-child
      margin-bottom: 1.5rem
    button
      height: 50px
      border-radius: 20px
  
  
+mobile
  .jumbo-logo 
    height: 84px
    width: 84px
  .blog-list-item header
    display: block
  .blog-list-item .featured-thumbnail
    text-align: center
    max-width: 100%
    margin: 0 0 1em
  
  .navbar-burger
    color: $primary
    width: 5.25rem
    margin-top: 0.7rem
    span
      height: 2px
    .burger
      width: 30px
      
  .section
    padding: 0 !important
  
  .product-page
    margin: 1rem
  
  .columns
    button
      color: $kaldi-red
      width: 80vw

  .navbar-menu
    font-size: 1.3rem

  .img-carousel
    display: flex
    flex-direction: column
    width: 400px
    margin: 3rem 1rem

  .submit-btn 
    width: 100%
    background: $kaldi-red !important

  .jumbo-heading
    h1
      font-size: 2rem !important

